--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<h1>github_workshop</h1>
+<!DOCTYPE html>
+<html>
+	<head>
+	<title>Ajeyaa's website</title>
+	</head>
+	<body>
+		<h1>First attempt at a website!!!</h1>
+		<p>Hey!!<br>I am Ajeyaa!! This is my first attempt at making a website!!</p>
+	</body>
+</html>	
